--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
             padding: 0; 
             height: 100%; 
             width: 100%; 
-            overflow: hidden; 
             background-color: #000; 
             font-family: sans-serif; 
+            overflow: hidden;
         }
-        /* This displays your bg.jpg as a full-screen background */
+
+        /* The background image logic */
         .bg-image { 
             position: fixed; 
             top: 0;
@@ -22,8 +23,10 @@
             width: 100%; 
             height: 100%; 
             object-fit: cover; 
-            z-index: -1; 
+            z-index: 1; /* Sits behind the buttons */
         }
+
+        /* Container for your buttons */
         .action-box { 
             position: fixed; 
             bottom: 30px; 
@@ -34,6 +37,8 @@
             align-items: flex-end; 
             z-index: 10; 
         }
+
+        /* 615 Field Guide Button */
         .download-btn { 
             background: rgba(255, 255, 255, 0.2); 
             color: white; 
@@ -44,18 +49,22 @@
             font-weight: bold; 
             letter-spacing: 1px; 
             text-transform: uppercase; 
-            /* This gives it that frosted glass look */
             backdrop-filter: blur(10px); 
+            -webkit-backdrop-filter: blur(10px);
             transition: 0.3s; 
         }
+
         .download-btn:hover { 
             background: white; 
             color: black; 
         }
+
+        /* Tip Links (Venmo/PayPal) */
         .tip-links { 
             display: flex; 
             gap: 8px; 
         }
+
         .tip-btn { 
             background: rgba(255, 255, 255, 0.1); 
             color: white; 
@@ -65,14 +74,17 @@
             font-size: 12px; 
             border: 1px solid rgba(255, 255, 255, 0.2); 
             backdrop-filter: blur(5px); 
+            -webkit-backdrop-filter: blur(5px);
             transition: 0.3s;
         }
+
         .tip-btn:hover {
             background: rgba(255, 255, 255, 0.2);
         }
     </style>
 </head>
 <body>
+
     <img src="bg.jpg" alt="Background" class="bg-image">
 
     <div class="action-box">
@@ -83,5 +95,6 @@
             <a href="https://paypal.me/timbo1hunnit" target="_blank" class="tip-btn">PayPal</a>
         </div>
     </div>
+
 </body>
 </html>
