--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             width: 100%; 
             background-color: #000; 
             font-family: sans-serif; 
-            overflow: hidden;
+            overflow: hidden; /* Prevents scrolling away from the artwork */
         }
 
         /* The background image logic */
@@ -23,10 +23,10 @@
             width: 100%; 
             height: 100%; 
             object-fit: cover; 
-            z-index: 1; /* Sits behind the buttons */
+            z-index: 1;
         }
 
-        /* Container for your buttons */
+        /* Standard Desktop View (Cornered) */
         .action-box { 
             position: fixed; 
             bottom: 30px; 
@@ -38,7 +38,34 @@
             z-index: 10; 
         }
 
-        /* 615 Field Guide Button */
+        /* MOBILE TIGHT FRAME FIX (Centered & Balanced) */
+        @media (max-width: 600px) {
+            .action-box {
+                right: 0;
+                left: 0;
+                bottom: 40px;
+                align-items: center; 
+                padding: 0 20px;     
+            }
+            
+            .download-btn {
+                width: 85%;          
+                text-align: center;
+                padding: 20px 0;
+            }
+
+            .tip-links {
+                width: 85%;
+                justify-content: center;
+            }
+
+            .tip-btn {
+                flex: 1;             
+                text-align: center;
+            }
+        }
+
+        /* Button Styling */
         .download-btn { 
             background: rgba(255, 255, 255, 0.2); 
             color: white; 
@@ -59,7 +86,6 @@
             color: black; 
         }
 
-        /* Tip Links (Venmo/PayPal) */
         .tip-links { 
             display: flex; 
             gap: 8px; 
@@ -78,8 +104,8 @@
             transition: 0.3s;
         }
 
-        .tip-btn:hover {
-            background: rgba(255, 255, 255, 0.2);
+        .tip-btn:hover { 
+            background: rgba(255, 255, 255, 0.2); 
         }
     </style>
 </head>
