--- a/index.html
+++ b/index.html
@@ -6,107 +6,62 @@
     <title>HeyYall615</title>
     <style>
         body, html { 
-            margin: 0; 
-            padding: 0; 
-            height: 100%; 
-            width: 100%; 
-            background-color: #000; 
-            font-family: sans-serif; 
-            overflow: hidden; /* Prevents scrolling away from the artwork */
+            margin: 0; padding: 0; height: 100%; width: 100%; 
+            background-color: #1a0f0a; /* Matches the dark brick tone */
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+            overflow: hidden;
         }
 
-        /* The background image logic */
+        /* The FIX: 'contain' ensures the letters H and L are never cut off */
         .bg-image { 
-            position: fixed; 
-            top: 0;
-            left: 0;
-            width: 100%; 
-            height: 100%; 
-            object-fit: cover; 
+            position: fixed; top: 0; left: 0;
+            width: 100%; height: 100%; 
+            object-fit: contain; 
             z-index: 1;
         }
 
-        /* Standard Desktop View (Cornered) */
         .action-box { 
-            position: fixed; 
-            bottom: 30px; 
-            right: 30px; 
-            display: flex; 
-            flex-direction: column; 
-            gap: 12px; 
-            align-items: flex-end; 
-            z-index: 10; 
+            position: fixed; bottom: 40px; left: 50%;
+            transform: translateX(-50%);
+            display: flex; flex-direction: column; 
+            gap: 12px; width: 90%; max-width: 380px; z-index: 10; 
         }
 
-        /* MOBILE TIGHT FRAME FIX (Centered & Balanced) */
-        @media (max-width: 600px) {
-            .action-box {
-                right: 0;
-                left: 0;
-                bottom: 40px;
-                align-items: center; 
-                padding: 0 20px;     
-            }
-            
-            .download-btn {
-                width: 85%;          
-                text-align: center;
-                padding: 20px 0;
-            }
-
-            .tip-links {
-                width: 85%;
-                justify-content: center;
-            }
-
-            .tip-btn {
-                flex: 1;             
-                text-align: center;
-            }
-        }
-
-        /* Button Styling */
+        /* 615 Field Guide - Gold/Yellow Pop */
         .download-btn { 
-            background: rgba(255, 255, 255, 0.2); 
-            color: white; 
-            padding: 18px 30px; 
-            border: 1px solid rgba(255, 255, 255, 0.4); 
-            border-radius: 50px; 
+            background: #ffcc00; 
+            color: #000; 
+            padding: 20px; 
+            border-radius: 12px; 
             text-decoration: none; 
-            font-weight: bold; 
+            font-weight: 900; 
             letter-spacing: 1px; 
             text-transform: uppercase; 
-            backdrop-filter: blur(10px); 
-            -webkit-backdrop-filter: blur(10px);
+            text-align: center;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.4);
             transition: 0.3s; 
         }
 
-        .download-btn:hover { 
-            background: white; 
-            color: black; 
+        .tip-links { display: flex; gap: 10px; }
+
+        /* Venmo Specific Blue */
+        .venmo-btn { 
+            flex: 1; background: #008CFF; color: white; 
+            padding: 14px; border-radius: 8px; text-decoration: none; 
+            font-size: 14px; text-align: center; font-weight: bold;
+            display: flex; align-items: center; justify-content: center; gap: 8px;
         }
 
-        .tip-links { 
-            display: flex; 
-            gap: 8px; 
+        /* PayPal Specific Blue */
+        .paypal-btn { 
+            flex: 1; background: #003087; color: white; 
+            padding: 14px; border-radius: 8px; text-decoration: none; 
+            font-size: 14px; text-align: center; font-weight: bold;
+            display: flex; align-items: center; justify-content: center; gap: 8px;
         }
 
-        .tip-btn { 
-            background: rgba(255, 255, 255, 0.1); 
-            color: white; 
-            padding: 10px 15px; 
-            border-radius: 8px; 
-            text-decoration: none; 
-            font-size: 12px; 
-            border: 1px solid rgba(255, 255, 255, 0.2); 
-            backdrop-filter: blur(5px); 
-            -webkit-backdrop-filter: blur(5px);
-            transition: 0.3s;
-        }
-
-        .tip-btn:hover { 
-            background: rgba(255, 255, 255, 0.2); 
-        }
+        /* Logo styling */
+        .logo-img { width: 18px; height: 18px; filter: brightness(0) invert(1); }
     </style>
 </head>
 <body>
@@ -114,11 +69,15 @@
     <img src="bg.jpg" alt="Background" class="bg-image">
 
     <div class="action-box">
-        <a href="document.pdf" download="615_Field_Guide" class="download-btn">615 Field Guide</a>
+        <a href="document.pdf" download="615_Field_Guide" class="download-btn">📂 615 Field Guide</a>
         
         <div class="tip-links">
-            <a href="https://venmo.com/Timbo1hunnit" target="_blank" class="tip-btn">Venmo</a>
-            <a href="https://paypal.me/timbo1hunnit" target="_blank" class="tip-btn">PayPal</a>
+            <a href="https://venmo.com/Timbo1hunnit" target="_blank" class="venmo-btn">
+                <span>Venmo</span>
+            </a>
+            <a href="https://paypal.me/timbo1hunnit" target="_blank" class="paypal-btn">
+                <span>PayPal</span>
+            </a>
         </div>
     </div>
 
